--- a/template/index.html
+++ b/template/index.html
@@ -1,125 +1,145 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <link rel="stylesheet" href="style.css" />
-  <title>Amazona</title>
-</head>
-
-<body>
-  <div class="grid-container">
-    <header class="header">
-      <div class="brand">
-        <button onclick="openMenu()">
-          &#9776;
-        </button>
-        <a href="index.html">amazona</a>
-      </div>
-      <div class="header-links">
-        <a href="cart.html">Cart</a>
-        <a href="signin.html">Sign In</a>
-      </div>
-    </header>
-    <aside class="sidebar">
-      <h3>Shopping Categories</h3>
-      <button class="sidebar-close-button" onclick="closeMenu()">x</button>
-      <ul>
-        <li>
-          <a href="index.html">Pants</a>
-        </li>
-
-        <li>
-          <a href="index.html">Shirts</a>
-        </li>
-
-      </ul>
-    </aside>
-    <main class="main">
-      <div class="content">
-        <ul class="products">
-          <li>
-            <div class="product">
-              <img class="product-image" src="images/d1.jpg" alt="product" />
-              <div class="product-name">
-                <a href="product.html">Slim Shirt</a>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>ecovoy40</title>
+  </head>
+  <body>
+    <div class="grid-container">
+      <header class="row">
+        <div>
+          <a class="brand" href="index.html">ecovoy40</a>
+        </div>
+        <div>
+          <a href="cart.html">Cart</a>
+          <a href="signin.html">Sign In</a>
+        </div>
+      </header>
+      <main>
+        <div>
+          <div class="row center">
+            <div class="card">
+              <a href="product.html">
+                <!-- image size: 680px by 830px -->
+                <img class="medium" src="./images/p1.jpg" alt="product" />
+              </a>
+              <div class="card-body">
+                <a href="product.html">
+                  <h2>Nike Slim Shirts</h2>
+                </a>
+                <div class="rating">
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                </div>
+                <div class="price">$120</div>
               </div>
-              <div class="product-brand">Nike</div>
-              <div class="product-price">$60</div>
-              <div class="product-rating">4.5 Stars (10 Reviews)</div>
             </div>
-          </li>
-          <li>
-            <div class="product">
-              <img class="product-image" src="images/d1.jpg" alt="product" />
-              <div class="product-name">
-                <a href="product.html">Slim Shirt</a>
+            <div class="card">
+              <a href="product.html">
+                <!-- image size: 680px by 830px -->
+                <img class="medium" src="./images/p1.jpg" alt="product" />
+              </a>
+              <div class="card-body">
+                <a href="product.html">
+                  <h2>Nike Slim Shirts</h2>
+                </a>
+                <div class="rating">
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                </div>
+                <div class="price">$120</div>
               </div>
-              <div class="product-brand">Nike</div>
-              <div class="product-price">$60</div>
-              <div class="product-rating">4.5 Stars (10 Reviews)</div>
             </div>
-          </li>
-          <li>
-            <div class="product">
-              <img class="product-image" src="images/d1.jpg" alt="product" />
-              <div class="product-name">
-                <a href="product.html">Slim Shirt</a>
+            <div class="card">
+              <a href="product.html">
+                <!-- image size: 680px by 830px -->
+                <img class="medium" src="./images/p1.jpg" alt="product" />
+              </a>
+              <div class="card-body">
+                <a href="product.html">
+                  <h2>Nike Slim Shirts</h2>
+                </a>
+                <div class="rating">
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                </div>
+                <div class="price">$120</div>
               </div>
-              <div class="product-brand">Nike</div>
-              <div class="product-price">$60</div>
-              <div class="product-rating">4.5 Stars (10 Reviews)</div>
             </div>
-          </li>
-          <li>
-            <div class="product">
-              <img class="product-image" src="images/d1.jpg" alt="product" />
-              <div class="product-name">
-                <a href="product.html">Slim Shirt</a>
+            <div class="card">
+              <a href="product.html">
+                <!-- image size: 680px by 830px -->
+                <img class="medium" src="./images/p1.jpg" alt="product" />
+              </a>
+              <div class="card-body">
+                <a href="product.html">
+                  <h2>Nike Slim Shirts</h2>
+                </a>
+                <div class="rating">
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                </div>
+                <div class="price">$120</div>
               </div>
-              <div class="product-brand">Nike</div>
-              <div class="product-price">$60</div>
-              <div class="product-rating">4.5 Stars (10 Reviews)</div>
             </div>
-          </li>
-          <li>
-            <div class="product">
-              <img class="product-image" src="images/d1.jpg" alt="product" />
-              <div class="product-name">
-                <a href="product.html">Slim Shirt</a>
+            <div class="card">
+              <a href="product.html">
+                <!-- image size: 680px by 830px -->
+                <img class="medium" src="./images/p1.jpg" alt="product" />
+              </a>
+              <div class="card-body">
+                <a href="product.html">
+                  <h2>Nike Slim Shirts</h2>
+                </a>
+                <div class="rating">
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                </div>
+                <div class="price">$120</div>
               </div>
-              <div class="product-brand">Nike</div>
-              <div class="product-price">$60</div>
-              <div class="product-rating">4.5 Stars (10 Reviews)</div>
             </div>
-          </li>
-          <li>
-            <div class="product">
-              <img class="product-image" src="images/d1.jpg" alt="product" />
-              <div class="product-name">
-                <a href="product.html">Slim Shirt</a>
+            <div class="card">
+              <a href="product.html">
+                <!-- image size: 680px by 830px -->
+                <img class="medium" src="./images/p1.jpg" alt="product" />
+              </a>
+              <div class="card-body">
+                <a href="product.html">
+                  <h2>Nike Slim Shirts</h2>
+                </a>
+                <div class="rating">
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star"></i> </span>
+                  <span> <i class="fa fa-star-half-o"></i> </span>
+                </div>
+                <div class="price">$120</div>
               </div>
-              <div class="product-brand">Nike</div>
-              <div class="product-price">$60</div>
-              <div class="product-rating">4.5 Stars (10 Reviews)</div>
             </div>
-          </li>
-
-        </ul>
-      </div>
-
-    </main>
-    <footer class="footer">
-      All right reserved.
-    </footer>
-  </div>
-  <script>
-    function openMenu() {
-      document.querySelector(".sidebar").classList.add("open");
-    }
-    function closeMenu() {
-      document.querySelector(".sidebar").classList.remove("open")
-    }
-  </script>
-</body>
-
+          </div>
+        </div>
+      </main>
+      <footer class="row center">All right reserved</footer>
+    </div>
+  </body>
 </html>
