--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,7 +27,7 @@ body {
 }
 header {
   grid-area: header;
-  background-color: #203040;
+  background-color: #23d414;
 }
 main {
   grid-area: main;
@@ -35,8 +35,8 @@ main {
 }
 footer {
   grid-area: footer;
-  background-color: #203040;
-  color: #ffffff;
+  background-color: #23d414;
+  color: #052805;
 }
 /* Common */
 h1 {
